Add Sankey Post
Added post on Sankey diagram for complications
and readmisions. Changed the home page image.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: TrailingZero
 ---
 <div id="home">
-  <img src="images/Stones.PNG" alt="stones" height="240" width="1000">
+  <img src="images/Stones2.SVG" alt="stones" height="240" width="1000">
   <h1>Intro</h1>
   <p> A site on the art of data analysis. Below you'll find posts about interesting visualizations, models and data analysis techniques.</p>
 </div>
