--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: TrailingZero
 ---
 <div id="home">
   
-  <img class="circimage" src="images/meb&w.JPG"  height="100" width="110">
+  <img class="circimage" src="images/meb&w.jpg"  height="100" width="110">
   
   
      <h2> About Me</h2>
