--- a/_posts/2015-08-28-Hospital-Structures.html
+++ b/_posts/2015-08-28-Hospital-Structures.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Loading CSV Data with D3</title>
-		<script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 	</head>
 	<body>
 
