--- a/_posts/2015-08-28-Hospital-Structures.html
+++ b/_posts/2015-08-28-Hospital-Structures.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Loading CSV Data with D3</title>
+		<title>Loading Hospital Data with D3 and SVG</title>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 	</head>
 	<body>
@@ -21,7 +21,7 @@
 
 
 			//Load in contents of CSV file
-			d3.csv("HospitalData.csv", function(data) {
+			d3.csv("/hospitaldata.csv", function(data) {
 
 				//Now CSV contents have been transformed into
 				//an array of JSON objects.
